--- a/style.css
+++ b/style.css
@@ -3,5 +3,10 @@ h1 {
 }
 
 body {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    font-size:x-large;
+}
+
+p {
+    font-size:x-large;
 }
